<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:contentDescription="@string/representative_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/office_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@{representative.office.name}"
            android:textColor="#9E9E9E"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Office name" />

        <TextView
            android:id="@+id/representative_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@{representative.official.name}"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/office_name_textview"
            app:layout_constraintTop_toBottomOf="@+id/office_name_textview"
            tools:text="Representative name" />

        <TextView
            android:id="@+id/party_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@{representative.official.party}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/office_name_textview"
            app:layout_constraintTop_toBottomOf="@+id/representative_name_textview"
            tools:text="Democratic Party" />

        <ImageView
            android:id="@+id/facebook_icon"
            style="@style/social_media_icons"
            android:contentDescription="@string/facebook_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitter_icon"
            style="@style/social_media_icons"
            android:contentDescription="@string/twitter_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/web_icon"
            style="@style/social_media_icons"
            android:contentDescription="@string/web_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:srcCompat="@drawable/ic_www" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>